feat: update input template

--- a/src/components/input/template.html
+++ b/src/components/input/template.html
@@ -1,26 +1,39 @@
 <template>
-	<div>
-		<input
-			type="text"
-			:id="id"
-			:name="id"
-			:placeholder="label"
-			:value="value"
-			aria-describedby="error-text"
-			@change="change"
-			@invalid="invalid"
-		/>
-		<div id="outer-border" @click="handleIcons"></div>
-		<div id="attention-marker"></div>
+	<div id="root">
 		<label :for="id">
 			{{label}}
 			<small id="required-text">(required)</small>
 		</label>
-		<div id="info-box">
-			<div id="info-text" tabindex="0">
-				<slot name="helper-text"></slot>
+		<div class="border" id="outer-border">
+			<div class="border" id="inner-border">
+				<input
+					type="text"
+					:id="id"
+					:name="id"
+					:placeholder="label"
+					:value="value"
+
+					:required="required"
+					:disabled="disabled"
+					:readonly="readOnly"
+					:maxlength="maxLength"
+					:minlength="minLength"
+					:pattern="pattern"
+					:autocomplete="autoComplete"
+					:inputmode="inputMode"
+
+					aria-describedby="error-text"
+					@change="change"
+					@invalid="invalid"
+				/>
 			</div>
-			<div id="error-text"></div>
+		</div>
+		<div id="attention-marker"></div>
+		<div id="message-box">
+			<small id="info-text" tabindex="0">
+				<slot name="helper-text"></slot>
+			</small>
+			<small id="error-text"></small>
 		</div>
 	</div>
 </template>
