--- a/src/components/input/template.html
+++ b/src/components/input/template.html
@@ -26,6 +26,9 @@
 					@change="change"
 					@invalid="invalid"
 				/>
+				<svg id="icons" viewBox="0 0 100 100" @click="handleIcons">
+					<rect id="icon-tel" x="0" y="0" width="50" height="50" />
+				</svg>
 			</div>
 		</div>
 		<div id="attention-marker"></div>
